Revert "Refactor NetconfMessageTransformer"
This reverts commit 1e71e52f219b84d673ca793f02306b6d27b38387. The
assumptsions being made are just not correct.

Change-Id: I8b65541c8c17b4c360a1e725fcb5cf6ec7bec4c3
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>