@@ -15,7 +15,6 @@ import static org.opendaylight.netconf.sal.connect.netconf.util.NetconfMessageTr
 import com.google.common.annotations.Beta;
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Preconditions;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Iterables;
@@ -57,12 +56,12 @@ import org.opendaylight.netconf.sal.connect.netconf.util.NetconfMessageTransform
 import org.opendaylight.netconf.sal.connect.util.MessageCounter;
 import org.opendaylight.yangtools.rfc8528.data.api.MountPointContext;
 import org.opendaylight.yangtools.yang.common.QName;
-import org.opendaylight.yangtools.yang.common.QNameModule;
 import org.opendaylight.yangtools.yang.common.Revision;
 import org.opendaylight.yangtools.yang.common.XMLNamespace;
 import org.opendaylight.yangtools.yang.data.api.YangInstanceIdentifier;
 import org.opendaylight.yangtools.yang.data.api.YangInstanceIdentifier.AugmentationIdentifier;
 import org.opendaylight.yangtools.yang.data.api.YangInstanceIdentifier.NodeIdentifierWithPredicates;
+import org.opendaylight.yangtools.yang.data.api.YangInstanceIdentifier.PathArgument;
 import org.opendaylight.yangtools.yang.data.api.schema.ContainerNode;
 import org.opendaylight.yangtools.yang.data.api.schema.NormalizedNode;
 import org.opendaylight.yangtools.yang.data.api.schema.stream.NormalizedNodeStreamWriter;
@@ -117,17 +116,17 @@ public class NetconfMessageTransformer implements MessageTransformer<NetconfMess
 
     public NetconfMessageTransformer(final MountPointContext mountContext, final boolean strictParsing,
                                      final BaseSchema baseSchema) {
-        counter = new MessageCounter();
+        this.counter = new MessageCounter();
         this.mountContext = requireNonNull(mountContext);
 
         final EffectiveModelContext schemaContext = mountContext.getEffectiveModelContext();
-        contextTree = DataSchemaContextTree.from(schemaContext);
+        this.contextTree = DataSchemaContextTree.from(schemaContext);
 
-        mappedRpcs = Maps.uniqueIndex(schemaContext.getOperations(), SchemaNode::getQName);
-        actions = getActions(schemaContext);
+        this.mappedRpcs = Maps.uniqueIndex(schemaContext.getOperations(), SchemaNode::getQName);
+        this.actions = getActions(schemaContext);
 
         // RFC6020 normal notifications
-        mappedNotifications = Multimaps.index(schemaContext.getNotifications(),
+        this.mappedNotifications = Multimaps.index(schemaContext.getNotifications(),
             node -> node.getQName().withoutRevision());
         this.baseSchema = baseSchema;
         this.strictParsing = strictParsing;
@@ -187,7 +186,7 @@ public class NetconfMessageTransformer implements MessageTransformer<NetconfMess
             Optional<NestedNotificationInfo> nestedNotificationOptional = findNestedNotification(message, element);
             if (nestedNotificationOptional.isPresent()) {
                 nestedNotificationInfo = nestedNotificationOptional.get();
-                notificationDefinitions = List.of(nestedNotificationInfo.notificationDefinition);
+                notificationDefinitions = Collections.singletonList(nestedNotificationInfo.notificationDefinition);
                 element = (Element) nestedNotificationInfo.notificationNode;
             }
         }
@@ -197,24 +196,27 @@ public class NetconfMessageTransformer implements MessageTransformer<NetconfMess
 
         final NotificationDefinition mostRecentNotification = getMostRecentNotification(notificationDefinitions);
 
-        final SchemaInferenceStack stack = SchemaInferenceStack.of(mountContext.getEffectiveModelContext());
+        final ContainerNode content;
+        final SchemaInferenceStack stack;
+        final List<QName> qnames;
         if (nestedNotificationInfo != null) {
-            final QNameModule targetModule = mostRecentNotification.getQName().getModule();
-            nestedNotificationInfo.domDataTreeIdentifier.getRootIdentifier().getPathArguments().stream()
-                .filter(arg -> !(arg instanceof NodeIdentifierWithPredicates))
-                .filter(arg -> !(arg instanceof AugmentationIdentifier))
-                .map(arg -> arg.getNodeType().bindTo(targetModule))
-                .forEach(stack::enterSchemaTree);
+            qnames = nestedNotificationInfo.domDataTreeIdentifier.getRootIdentifier().getPathArguments().stream()
+                    .filter(arg -> !(arg instanceof NodeIdentifierWithPredicates))
+                    .filter(arg -> !(arg instanceof AugmentationIdentifier))
+                    .map(PathArgument::getNodeType)
+                    .map(qName -> QName.create(mostRecentNotification.getQName(), qName.getLocalName()))
+                    .collect(Collectors.toList());
+            stack = SchemaInferenceStack.of(mountContext.getEffectiveModelContext(), Absolute.of(qnames));
         } else {
-            stack.enterSchemaTree(mostRecentNotification.getQName());
+            stack = SchemaInferenceStack.of(mountContext.getEffectiveModelContext(),
+                    Absolute.of(mostRecentNotification.getQName()));
         }
 
-        final ContainerNode content;
         try {
             final NormalizedNodeResult resultHolder = new NormalizedNodeResult();
             final NormalizedNodeStreamWriter writer = ImmutableNormalizedNodeStreamWriter.from(resultHolder);
-            final XmlParserStream xmlParser = XmlParserStream.create(writer, mountContext, stack.toInference(),
-                strictParsing);
+            final XmlParserStream xmlParser = XmlParserStream.create(writer, mountContext,
+                    stack.toInference(), strictParsing);
             xmlParser.traverse(new DOMSource(element));
             content = (ContainerNode) resultHolder.getResult();
         } catch (XMLStreamException | URISyntaxException | IOException | SAXException
@@ -445,8 +447,8 @@ public class NetconfMessageTransformer implements MessageTransformer<NetconfMess
                     "Unable to parse response of %s, the rpc is unknown", rpc);
 
             // In case no input for rpc is defined, we can simply construct the payload here
-            normalizedNode = parseResult(message, rpcDefinition,
-                Absolute.of(rpcDefinition.getQName(), rpcDefinition.getOutput().getQName()));
+            final Absolute rpcPath = Absolute.of(rpcDefinition.getQName(), rpcDefinition.getOutput().getQName());
+            normalizedNode = parseResult(message, rpcDefinition, rpcPath);
         }
         return new DefaultDOMRpcResult(normalizedNode);
     }
@@ -456,15 +458,15 @@ public class NetconfMessageTransformer implements MessageTransformer<NetconfMess
         final ActionDefinition actionDefinition = actions.get(action);
         Preconditions.checkArgument(actionDefinition != null, "Action does not exist: %s", action);
 
-        final List<QName> actionIds = action.getNodeIdentifiers();
-        final ContainerNode normalizedNode = (ContainerNode) parseResult(message, actionDefinition,
-            Absolute.of(ImmutableList.<QName>builderWithExpectedSize(actionIds.size() + 1)
-                .addAll(actionIds).add(actionDefinition.getOutput().getQName())
-                .build()));
+        final SchemaInferenceStack stack = SchemaInferenceStack.of(mountContext.getEffectiveModelContext(), action);
+        stack.enterSchemaTree(actionDefinition.getOutput().getQName());
+        final Absolute actionPath = stack.toSchemaNodeIdentifier();
+
+        final ContainerNode normalizedNode = (ContainerNode) parseResult(message, actionDefinition, actionPath);
         if (normalizedNode == null) {
-            return new SimpleDOMActionResult(List.of());
+            return new SimpleDOMActionResult(Collections.emptyList());
         } else {
-            return new SimpleDOMActionResult(normalizedNode, List.of());
+            return new SimpleDOMActionResult(normalizedNode, Collections.emptyList());
         }
     }
 
@@ -507,7 +509,7 @@ public class NetconfMessageTransformer implements MessageTransformer<NetconfMess
         NetconfDeviceNotification(final ContainerNode content, final Instant eventTime) {
             this.content = content;
             this.eventTime = eventTime;
-            schemaPath = Absolute.of(content.getIdentifier().getNodeType());
+            this.schemaPath = Absolute.of(content.getIdentifier().getNodeType());
         }
 
         NetconfDeviceNotification(final ContainerNode content, final Absolute schemaPath, final Instant eventTime) {
